feat: :sparkles: add find behavior

--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,17 @@
     <title>Mi Tiendita</title>
 </head>
 <body class="bg-black">
+
     <main>
+        <section id="find-categories">
+          <form id="finder">
+            <div class="input-group">
+              <input type="text" class="form-control" id="search" aria-describedby="find" aria-label="Upload">
+              <button class="btn btn-outline-secondary" type="submit" id="find">Buscar</button>
+            </div>
+            <div id="find-results"class="d-flex flex-wrap"></div>
+          </form>
+        </section>
         <section >
             <form id="register">
                 <div class="form-group">
