--- a/src/pages/update.html
+++ b/src/pages/update.html
@@ -7,6 +7,13 @@
 </head>
 <body class="bg-black">
     <main>
+        <form id="finder">
+            <div class="input-group">
+              <input type="text" class="form-control" id="search" aria-describedby="find" aria-label="Upload">
+              <button class="btn btn-outline-secondary" type="submit" id="find">Buscar</button>
+            </div>
+            <div id="find-results" class="d-flex flex-wrap"></div>
+          </form>
         <section >
             <form id="updater">
                 <div class="form-group">
